--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,10 +1,11 @@
 etiqueta_nombre=Nombre
 etiqueta_apellidos=Apellidos
 etiqueta_fechaNacimiento=Fecha de Nacimiento
-etiqueta_generoSeleccionado=Fecha de Nacimiento
+etiqueta_genero=Género ->
+etiqueta_nacionalidades=Nacionalidades
+etiqueta_botonEnviar=Grabar información e ir al paso 2 - Datos profesionales
 
-
-datosUsuario= Datos de usuario
 datosPersonales= Datos personales
+datosProfesionales= Datos profesionales
 datosContacto=Datos de contacto
 datosOtros=Otros datos a rellenar
