--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,6 @@ datosPersonales= Datos personales
 datosProfesionales= Datos profesionales
 datosContacto=Datos de contacto
 datosOtros=Otros datos a rellenar
+
+NotBlank.Sesion.nombre=Nombre inválido
+NotNull.Sesion.nombre=Nombre nulo
