--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,12 +3,14 @@ etiqueta_apellidos=Apellidos
 etiqueta_fechaNacimiento=Fecha de Nacimiento
 etiqueta_genero=Género ->
 etiqueta_nacionalidades=Nacionalidades
-etiqueta_botonEnviar=Grabar información e ir al paso 2 - Datos profesionales
+etiqueta_botonEnviar=Grabar informaciÃ³n e ir al paso 2 - Datos profesionales
 
 datosPersonales= Datos personales
 datosProfesionales= Datos profesionales
 datosContacto=Datos de contacto
 datosOtros=Otros datos a rellenar
 
-NotBlank.Sesion.nombre=Nombre inválido
+NotBlank.Sesion.nombre=* Nombre inválido
+NotBlank.Sesion.apellidos=* No puede estar vacío
 NotNull.Sesion.nombre=Nombre nulo
+NotNull.Sesion.apellidos=Apellidos nulos
