--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,14 +3,28 @@ etiqueta_apellidos=Apellidos
 etiqueta_fechaNacimiento=Fecha de Nacimiento
 etiqueta_genero=Género ->
 etiqueta_nacionalidades=Nacionalidades
-etiqueta_botonEnviar=Grabar informaciÃ³n e ir al paso 2 - Datos profesionales
+etiqueta_botonEnviar1=Grabar información e ir al paso 2 - Datos profesionales
+etiqueta_botonEnviar2=Grabar información e ir al paso 3 - Datos bancarios
+etiqueta_botonEnviar3=Grabar información e ir al resumen final
+etiqueta_departamentoSeleccionado=Departamento
+etiqueta_salario=Salario
+etiqueta_comentarios=Comentarios
+etiqueta_cuenta=Cuenta corriente
+phComentarios=Escribe aquí más datos relevantes sobre el mismo
 
 datosPersonales= Datos personales
 datosProfesionales= Datos profesionales
-datosContacto=Datos de contacto
-datosOtros=Otros datos a rellenar
+datosBancarios=Datos bancarios
 
-NotBlank.Sesion.nombre=* Nombre inválido
-NotBlank.Sesion.apellidos=* No puede estar vacío
-NotNull.Sesion.nombre=Nombre nulo
-NotNull.Sesion.apellidos=Apellidos nulos
+NotBlank.datosPersonales.nombre=* El nombre no puede estar vacío
+NotBlank.datosPersonales.apellidos=* Los apellidos no pueden estar vacío
+NotBlank.datosPersonales.generoSeleccionado=* Debe seleccionar un género
+NotNull.datosPersonales.nombre=* Nombre nulo
+NotNull.datosPersonales.apellidos=* Apellidos nulos
+NotEmpty.datosPersonales.nacionalidadesSeleccionadas=* Debe seleccionar al menos una nacionalidad
+
+DateTimeFormat.datosPersonales.fechaNacimiento= * El formato de fecha tiene que ser DD/MM/AAAA
+DecimalMin.datosProfesionales.salario=* El salario no puede ser negativo
+Digits.datosProfesionales.salario=* El salario no puede tener más de dos decimales
+
+typeMismatch.datosPersonales.fechaNacimiento=* El formato de fecha no es válido
