--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,21 +1,26 @@
+etiqueta_tratamiento=Forma de trato
 etiqueta_nombre=Nombre
 etiqueta_apellidos=Apellidos
 etiqueta_fechaNacimiento=Fecha de Nacimiento
 etiqueta_genero=Género ->
 etiqueta_nacionalidades=Nacionalidades
-etiqueta_botonEnviar1=Grabar información e ir al paso 2 - Datos profesionales
-etiqueta_botonEnviar2=Grabar información e ir al paso 3 - Datos bancarios
+etiqueta_botonEnviar1=Grabar información e ir al paso 2 - Datos personales
+etiqueta_botonEnviar2=Grabar información e ir al paso 3 - Datos profesionales
 etiqueta_botonEnviar3=Grabar información e ir al resumen final
 etiqueta_departamentoSeleccionado=Departamento
 etiqueta_salario=Salario
 etiqueta_comentarios=Comentarios
-etiqueta_cuenta=Cuenta corriente
+etiqueta_usuario=Usuario
+etiqueta_clave=Clave
+etiqueta_claveConfirmar=Confirmar clave
 phComentarios=Escribe aquí más datos relevantes sobre el mismo
 
 datosPersonales= Datos personales
 datosProfesionales= Datos profesionales
-datosBancarios=Datos bancarios
+datosUsuario=Datos de usuario
 
+NotBlank.datosUsuario.usuario=* El usuario no puede estar vacío
+NotBlank.datosUsuario.clave=* La clave no puede estar vacía
 NotBlank.datosPersonales.nombre=* El nombre no puede estar vacío
 NotBlank.datosPersonales.apellidos=* Los apellidos no pueden estar vacío
 NotBlank.datosPersonales.generoSeleccionado=* Debe seleccionar un género
