--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,13 +20,14 @@ datosProfesionales= Datos profesionales
 datosUsuario=Datos de usuario
 
 NotBlank.datosUsuario.usuario=* El usuario no puede estar vacío
-NotBlank.datosUsuario.clave=* La clave no puede estar vacía
+NotEmpty.datosUsuario.clave=* La clave no puede estar vacía
 NotBlank.datosPersonales.nombre=* El nombre no puede estar vacío
 NotBlank.datosPersonales.apellidos=* Los apellidos no pueden estar vacío
 NotBlank.datosPersonales.generoSeleccionado=* Debe seleccionar un género
 NotNull.datosPersonales.nombre=* Nombre nulo
 NotNull.datosPersonales.apellidos=* Apellidos nulos
-NotEmpty.datosPersonales.nacionalidadesSeleccionadas=* Debe seleccionar al menos una nacionalidad
+Size.datosPersonales.nacionalidadesSeleccionadas=* Debe seleccionar al menos dos nacionalidad
+
 
 DateTimeFormat.datosPersonales.fechaNacimiento= * El formato de fecha tiene que ser DD/MM/AAAA
 DecimalMin.datosProfesionales.salario=* El salario no puede ser negativo
