--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ etiqueta_comentarios=Comentarios
 etiqueta_usuario=Usuario
 etiqueta_clave=Clave
 etiqueta_claveConfirmar=Confirmar clave
+etiqueta-inicioSesion=Iniciar Sesión
 phComentarios=Escribe aquí más datos relevantes sobre el mismo
 
 datosPersonales= Datos personales
@@ -34,3 +35,4 @@ DecimalMin.datosProfesionales.salario=* El salario no puede ser negativo
 Digits.datosProfesionales.salario=* El salario no puede tener más de dos decimales
 
 typeMismatch.datosPersonales.fechaNacimiento=* El formato de fecha no es válido
+typeMismatch.datosProfesionales.salario=* El salario debe ser un valor numérico
