--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,7 +13,9 @@ etiqueta_comentarios=Comentarios
 etiqueta_usuario=Usuario
 etiqueta_clave=Clave
 etiqueta_claveConfirmar=Confirmar clave
-etiqueta-inicioSesion=Iniciar Sesión
+etiqueta_inicioSesion=Iniciar Sesión
+etiqueta_Autenticacion=Autenticación
+etiqueta_areaPersonal=Área Personal
 phComentarios=Escribe aquí más datos relevantes sobre el mismo
 
 datosPersonales= Datos personales
