--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,7 +6,9 @@ etiqueta_genero=Género ->
 etiqueta_nacionalidades=Nacionalidades
 etiqueta_botonEnviar1=Grabar información e ir al paso 2 - Datos personales
 etiqueta_botonEnviar2=Grabar información e ir al paso 3 - Datos profesionales
-etiqueta_botonEnviar3=Grabar información e ir al resumen final
+etiqueta_botonEnviar3=Ir al resumen final
+etiqueta_botonEnviar4=Grabar información
+etiqueta_botonVolver=Vaciar los datos y volver a paso 1- Datos de usuario.
 etiqueta_departamentoSeleccionado=Departamento
 etiqueta_salario=Salario
 etiqueta_comentarios=Comentarios
