--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,7 +35,7 @@ Size.datosPersonales.nacionalidadesSeleccionadas=* Debe seleccionar al menos dos
 
 
 DateTimeFormat.datosPersonales.fechaNacimiento= * El formato de fecha tiene que ser DD/MM/AAAA
-DecimalMin.datosProfesionales.salario=* El salario no puede ser negativo
+DecimalMin.datosProfesionales.salario=* El salario no puede ser menor al SMI
 Digits.datosProfesionales.salario=* El salario no puede tener más de dos decimales
 
 typeMismatch.datosPersonales.fechaNacimiento=* El formato de fecha no es válido
