--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,7 +10,7 @@ etiqueta_botonEnviar3=Ir al resumen final
 etiqueta_botonEnviar4=Grabar información
 etiqueta_botonVolver=Vaciar los datos y volver a paso 1- Datos de usuario.
 etiqueta_departamentoSeleccionado=Departamento
-etiqueta_salario=Salario
+etiqueta_salario=Salario mensual
 etiqueta_comentarios=Comentarios
 etiqueta_usuario=Usuario
 etiqueta_clave=Clave
@@ -35,8 +35,8 @@ Size.datosPersonales.nacionalidadesSeleccionadas=* Debe seleccionar al menos dos
 
 
 DateTimeFormat.datosPersonales.fechaNacimiento= * El formato de fecha tiene que ser DD/MM/AAAA
-DecimalMin.datosProfesionales.salario=* El salario no puede ser negativo
-Digits.datosProfesionales.salario=* El salario no puede tener más de dos decimales
+DecimalMin.datosProfesionales.salario=* El salario no puede ser menor al SMI
+Digits.datosProfesionales.salario=* El salario no es válido
 
 typeMismatch.datosPersonales.fechaNacimiento=* El formato de fecha no es válido
 typeMismatch.datosProfesionales.salario=* El salario debe ser un valor numérico
